--- a/.editorconfig
+++ b/.editorconfig
@@ -1,10 +1,13 @@
 root = true
 
 [*]
-indent_style = space
-indent_size = 4
-insert_final_newline = false
+insert_final_newline = true
+max_line_length = 150
 
-[package.json]
+[*.ts]
+indent_style = tab
+indent_size = 4
+
+[*.json]
 indent_style = space
 indent_size = 2
