--- a/package.json
+++ b/package.json
@@ -1,32 +1,39 @@
 {
-  "name": "siren-mobx",
-  "version": "1.0.0",
-  "main": "index.js",
+  "name": "siren-state",
+  "version": "0.0.1",
+  "main": "index.ts",
   "license": "MIT",
   "dependencies": {
+    "graphlib": "^2.1.2",
+    "lodash.flatmap": "^4.5.0",
+    "lodash.head": "^4.0.1",
     "lodash.identity": "^3.0.0",
+    "lodash.isempty": "^4.4.0",
+    "lodash.isobject": "^3.0.2",
+    "lodash.isplainobject": "^4.0.6",
     "lodash.kebabcase": "^4.1.1",
     "lodash.noop": "^3.0.1",
+    "lodash.pickby": "^4.6.0",
+    "lodash.uniq": "^4.5.0",
     "query-string": "^5.0.1",
     "uuid": "^3.1.0"
   },
   "scripts": {
     "lint": "tslint --exclude 'src/**/*.d.ts' 'src/**/*.{ts,tsx}'",
     "lint:fix": "tslint --fix --exclude 'src/**/*.d.ts' 'src/**/*.{ts,tsx}'",
-    "test": "jest --config ./.jestrc.json",
+    "test": "jest --collectCoverage=true --config=./.jestrc.json",
     "test:watch": "jest --config ./.jestrc.json --watchAll"
   },
   "devDependencies": {
-    "@types/uuid": "^3.4.3",
-    "jest-fetch-mock": "^1.4.0",
+    "@types/graphlib": "^2.1.4",
+    "@types/lodash": "^4.14.92",
     "@types/chance": "^0.7.35",
     "@types/jest": "^21.1.8",
-    "@types/lodash.identity": "^3.0.3",
-    "@types/lodash.kebabcase": "^4.1.3",
-    "@types/lodash.noop": "^3.0.3",
     "@types/query-string": "^5.0.1",
+    "@types/uuid": "^3.4.3",
     "chance": "^1.0.12",
     "jest": "^21.2.1",
+    "jest-fetch-mock": "^1.4.0",
     "ts-jest": "^21.2.4",
     "ts-lint": "^4.5.1",
     "typescript": "^2.6.2"
