--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+  "author": {
+    "name": "Mark LeMerise"
+  },
+  "engines": {
+    "node": "8.9.0"
+  },
   "name": "siren-state",
   "version": "0.0.1",
   "main": "index.ts",
@@ -15,6 +21,7 @@
     "lodash.noop": "^3.0.1",
     "lodash.pickby": "^4.6.0",
     "lodash.uniq": "^4.5.0",
+    "loglevel": "^1.6.0",
     "query-string": "^5.0.1",
     "uuid": "^3.1.0"
   },
@@ -25,17 +32,18 @@
     "test:watch": "jest --config ./.jestrc.json --watchAll"
   },
   "devDependencies": {
-    "@types/graphlib": "^2.1.4",
-    "@types/lodash": "^4.14.92",
     "@types/chance": "^0.7.35",
+    "@types/graphlib": "^2.1.4",
     "@types/jest": "^21.1.8",
+    "@types/lodash": "^4.14.92",
+    "@types/loglevel": "^1.5.3",
     "@types/query-string": "^5.0.1",
     "@types/uuid": "^3.4.3",
     "chance": "^1.0.12",
-    "jest": "^21.2.1",
+    "jest": "^22.0.4",
     "jest-fetch-mock": "^1.4.0",
-    "ts-jest": "^21.2.4",
-    "ts-lint": "^4.5.1",
+    "ts-jest": "^22.0.1",
+    "tslint": "^5.8.0",
     "typescript": "^2.6.2"
   }
 }
