--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash.head": "^4.0.1",
     "lodash.identity": "^3.0.0",
     "lodash.isempty": "^4.4.0",
+    "lodash.isnil": "^4.0.0",
     "lodash.isobject": "^3.0.2",
     "lodash.isplainobject": "^4.0.6",
     "lodash.kebabcase": "^4.1.1",
@@ -26,6 +27,7 @@
     "lodash.uniq": "^4.5.0",
     "loglevel": "^1.6.0",
     "query-string": "^5.0.1",
+    "typescript": "^2.7.1",
     "uuid": "^3.1.0"
   },
   "scripts": {
@@ -46,7 +48,6 @@
     "jest": "^22.0.4",
     "jest-fetch-mock": "^1.4.0",
     "ts-jest": "^22.0.1",
-    "tslint": "^5.8.0",
-    "typescript": "^2.6.2"
+    "tslint": "^5.8.0"
   }
 }
