Refactored the world; simplified the library a ton by removing unnecessary interfaces and generics

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
+  "files.autoSave": "afterDelay",
+  "files.autoSaveDelay": 250,
   "files.exclude": {
       "**/.git": true,
       "**/.svn": true,
