--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "lodash.uniq": "^4.5.0",
     "loglevel": "^1.6.0",
     "query-string": "^5.0.1",
-    "typescript": "^2.7.1",
+    "url-search-params": "^1.1.0",
     "uuid": "^3.1.0"
   },
   "scripts": {
@@ -43,11 +43,13 @@
     "@types/lodash": "^4.14.92",
     "@types/loglevel": "^1.5.3",
     "@types/query-string": "^5.0.1",
+    "@types/url-search-params": "^0.10.2",
     "@types/uuid": "^3.4.3",
     "chance": "^1.0.12",
     "jest": "^22.0.4",
     "jest-fetch-mock": "^1.4.0",
     "ts-jest": "^22.0.1",
-    "tslint": "^5.8.0"
+    "tslint": "^5.8.0",
+    "typescript": "^3.1.6"
   }
 }
